--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,17 +10,19 @@ variables:
   imageName: 'mahmoudalsory/todoapp'
   cacheTag: 'buildcache'
   YARN_CACHE_FOLDER: '$(Pipeline.Workspace)/.yarn-cache'  # Path for Yarn cache
-  NODE_MODULES_CACHE_KEY: 'node-modules-v1-$(Agent.OS)-$(HashFiles("**/yarn.lock"))'  # Cache key for node_modules
+  NODE_MODULES_CACHE_KEY: 'node-modules-v1-$(Agent.OS)-$(HashFiles("yarn.lock"))'  # Cache key for node_modules
 
 steps:
-- task: DockerInstaller@0
-  inputs:
-    dockerVersion: '20.10.7'
+# Step 0: Debugging Step (Optional)
+- script: |
+    echo "Checking for yarn.lock file..."
+    ls -R | grep yarn.lock || echo "yarn.lock not found!"
+  displayName: 'Debug: Check for yarn.lock'
 
 # Step 1: Cache Yarn Cache
 - task: Cache@2
   inputs:
-    key: 'yarn-cache-v1-$(Agent.OS)-$(HashFiles("**/yarn.lock"))'  # Unique key based on yarn.lock
+    key: 'yarn-cache-v1-$(Agent.OS)-$(HashFiles("yarn.lock"))'  # Unique key based on yarn.lock
     restoreKeys: |
       yarn-cache-v1-$(Agent.OS)-
     path: $(YARN_CACHE_FOLDER)
