--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,6 +15,7 @@ steps:
   inputs:
     dockerVersion: '20.10.7'
 
+# Cache Yarn cache folder between builds
 - task: Cache@2
   inputs:
     key: 'yarn | "$(Agent.OS)" | yarn.lock'
@@ -23,21 +24,26 @@ steps:
     path: $(Pipeline.Workspace)/.yarn-cache
   displayName: 'Restore Yarn Cache'
 
+# Prepare the folder in case it doesn't exist
 - script: |
     mkdir -p $(Pipeline.Workspace)/.yarn-cache
   displayName: 'Prepare Yarn Cache Folder'
 
+# Log in to Docker Hub
 - script: |
     echo "$(DOCKERHUB_PASSWORD)" | docker login -u "$(DOCKERHUB_USERNAME)" --password-stdin
   displayName: 'Login to Docker Hub'
 
+# Set up Buildx builder for caching and multi-platform builds
 - script: |
     docker buildx create --use --name builder
     docker buildx inspect --bootstrap
   displayName: 'Setup Docker Buildx'
 
+# Build and Push the Docker Image with BuildKit and Layer Caching
 - script: |
     export DOCKER_BUILDKIT=1
+
     docker buildx build \
       --builder builder \
       --build-arg YARN_CACHE_FOLDER=/yarn-cache \
@@ -48,7 +54,7 @@ steps:
       .
   displayName: 'Build & Push with BuildKit'
 
-# TEMPORARY LOCAL CONTAINER TEST
+# TEMPORARY: Run and Test Image Locally on Azure Agent
 - script: |
     echo "Pulling image and running container locally on agent..."
     docker run -d -p 90:80 --name test-container $(imageName):latest
