--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,6 +19,17 @@ steps:
     echo "$(DOCKERHUB_PASSWORD)" | docker login -u "$(DOCKERHUB_USERNAME)" --password-stdin
   displayName: 'Login to Docker Hub'
 
+- task: Cache@2
+  inputs:
+    key: 'yarn | "$(Agent.OS)" | yarn.lock'
+    path: '$(Pipeline.Workspace)/.npm'
+  displayName: 'Cache yarn dependencies'
+
+- script: |
+    mkdir -p $(Pipeline.Workspace)/.npm
+    cp -R . $(Pipeline.Workspace)/.npm
+  displayName: 'Prepare cache directory'
+
 - script: |
     docker buildx create --use --name builder
     docker buildx inspect --bootstrap
