--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,53 +8,80 @@ pool:
 
 variables:
   imageName: 'mahmoudalsory/todoapp'
-  YARN_CACHE_FOLDER: $(Pipeline.Workspace)/.yarn/cache
-  npm_config_cache: $(Pipeline.Workspace)/.npm
 
 steps:
 # ----------------------------
-# 1. Setup Node.js (consider upgrading to LTS)
+# 1. Setup Node.js
 # ----------------------------
 - task: NodeTool@0
   inputs:
-    versionSpec: '16.x'  # Updated to LTS version
+    versionSpec: '14.x'
   displayName: 'Install Node.js'
 
 # ----------------------------
-# 2. Cache Yarn packages (more efficient approach)
+# 2. Restore Yarn Offline Cache
+# ----------------------------
+- script: |
+    mkdir -p .yarn-cache
+    cp -r $(Pipeline.Workspace)/.yarn-cache/* .yarn-cache/ || true
+  displayName: 'Restore Yarn Offline Cache'
+
+# ----------------------------
+# 3. Cache Yarn Tarballs
 # ----------------------------
 - task: Cache@2
   inputs:
-    key: 'yarn | "$(Agent.OS)" | yarn.lock'
+    key: 'yarn-tarballs | "$(Agent.OS)" | yarn.lock'
+    path: .yarn-cache
     restoreKeys: |
-      yarn | "$(Agent.OS)"
-    path: |
-      $(YARN_CACHE_FOLDER)
-      node_modules
-  displayName: 'Cache Yarn packages'
+      yarn-tarballs | "$(Agent.OS)"
+  displayName: 'Cache Yarn Tarballs'
 
 # ----------------------------
-# 3. Yarn Install with optimized flags
+# 4. Cache node_modules
+# ----------------------------
+- task: Cache@2
+  inputs:
+    key: 'yarn-modules | "$(Agent.OS)" | yarn.lock'
+    path: node_modules
+    restoreKeys: |
+      yarn-modules | "$(Agent.OS)"
+  displayName: 'Cache node_modules'
+
+# ----------------------------
+# 5. Yarn Install
 # ----------------------------
 - script: |
-    yarn install --immutable --immutable-cache --check-cache
-  displayName: 'Yarn Install (optimized)'
+    yarn config set yarn-offline-mirror .yarn-cache
+    yarn install --frozen-lockfile --prefer-offline --immutable
+  displayName: 'Yarn Install with Offline Cache'
 
 # ----------------------------
-# 4. Build the app
+# 6. Cache dist/ folder
+# ----------------------------
+- task: Cache@2
+  inputs:
+    key: 'build-dist | "$(Agent.OS)" | yarn.lock'
+    path: dist
+    restoreKeys: |
+      build-dist | "$(Agent.OS)"
+  displayName: 'Cache dist folder'
+
+# ----------------------------
+# 7. Build the app
 # ----------------------------
 - script: yarn build
   displayName: 'Build App'
 
 # ----------------------------
-# 5. Docker Login
+# 8. Docker Login
 # ----------------------------
 - script: |
     echo "$(DOCKERHUB_PASSWORD)" | docker login -u "$(DOCKERHUB_USERNAME)" --password-stdin
   displayName: 'Docker Login'
 
 # ----------------------------
-# 6. Docker Build & Push
+# 9. Docker Build & Push
 # ----------------------------
 - script: |
     docker build -t $(imageName):latest .
@@ -62,7 +89,7 @@ steps:
   displayName: 'Build & Push Docker Image'
 
 # ----------------------------
-# 7. Run & Test the Container
+# 10. Run & Test the Container
 # ----------------------------
 - script: |
     echo "Running container locally on agent..."
