--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -68,20 +68,30 @@ steps:
   displayName: 'Cache dist folder'
 
 # ----------------------------
-# 7. Build the app
+# 7. Check if dist folder exists
 # ----------------------------
-- script: yarn build
-  displayName: 'Build App'
+- script: |
+    if [ -d "dist" ]; then
+      echo "##vso[task.setvariable variable=skipBuild]true"
+    fi
+  displayName: 'Check if dist folder exists'
 
 # ----------------------------
-# 8. Docker Login
+# 8. Build the app (conditional)
+# ----------------------------
+- script: yarn build
+  condition: ne(variables['skipBuild'], 'true')
+  displayName: 'Build App (if needed)'
+
+# ----------------------------
+# 9. Docker Login
 # ----------------------------
 - script: |
     echo "$(DOCKERHUB_PASSWORD)" | docker login -u "$(DOCKERHUB_USERNAME)" --password-stdin
   displayName: 'Docker Login'
 
 # ----------------------------
-# 9. Docker Build & Push
+# 10. Docker Build & Push
 # ----------------------------
 - script: |
     docker build -t $(imageName):latest .
@@ -89,7 +99,7 @@ steps:
   displayName: 'Build & Push Docker Image'
 
 # ----------------------------
-# 10. Run & Test the Container
+# 11. Run & Test the Container
 # ----------------------------
 - script: |
     echo "Running container locally on agent..."
