--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,7 +11,7 @@ variables:
 
 steps:
 # ----------------------------
-# 1. Install Node.js
+# 1. Setup Node.js
 # ----------------------------
 - task: NodeTool@0
   inputs:
@@ -19,38 +19,79 @@ steps:
   displayName: 'Install Node.js'
 
 # ----------------------------
-# 2. Restore Yarn Cache
+# 2. Restore Yarn Offline Cache
+# ----------------------------
+- script: |
+    mkdir -p .yarn-cache
+    cp -r $(Pipeline.Workspace)/.yarn-cache/* .yarn-cache/ || true
+  displayName: 'Restore Yarn Offline Cache'
+
+# ----------------------------
+# 3. Cache Yarn Tarballs
 # ----------------------------
 - task: Cache@2
   inputs:
-    key: 'yarn | "$(Agent.OS)" | yarn.lock'
+    key: 'yarn-tarballs | "$(Agent.OS)" | yarn.lock'
+    path: .yarn-cache
+    restoreKeys: |
+      yarn-tarballs | "$(Agent.OS)"
+  displayName: 'Cache Yarn Tarballs'
+
+# ----------------------------
+# 4. Cache node_modules
+# ----------------------------
+- task: Cache@2
+  inputs:
+    key: 'yarn-modules | "$(Agent.OS)" | yarn.lock'
     path: node_modules
     restoreKeys: |
-      yarn | "$(Agent.OS)"
-  displayName: 'Restore Yarn Cache'
+      yarn-modules | "$(Agent.OS)"
+  displayName: 'Cache node_modules'
 
 # ----------------------------
-# 3. Install Dependencies
+# 5. Yarn Install
 # ----------------------------
 - script: |
-    yarn install --frozen-lockfile --prefer-offline
-  displayName: 'Install Dependencies'
+    yarn config set yarn-offline-mirror .yarn-cache
+    yarn install --frozen-lockfile --prefer-offline --immutable
+  displayName: 'Yarn Install with Offline Cache'
 
 # ----------------------------
-# 4. Build the App
+# 6. Cache dist/ folder
+# ----------------------------
+- task: Cache@2
+  inputs:
+    key: 'build-dist | "$(Agent.OS)" | yarn.lock'
+    path: dist
+    restoreKeys: |
+      build-dist | "$(Agent.OS)"
+  displayName: 'Cache dist folder'
+
+# ----------------------------
+# 7. Check if dist folder exists
+# ----------------------------
+- script: |
+    if [ -d "dist" ]; then
+      echo "##vso[task.setvariable variable=skipBuild]true"
+    fi
+  displayName: 'Check if dist folder exists'
+
+# ----------------------------
+# 8. Build the app (conditional)
 # ----------------------------
 - script: yarn build
-  displayName: 'Build App'
+  condition: ne(variables['skipBuild'], 'true')
+  displayName: 'Build App (if needed)'
 
 # ----------------------------
-# 5. Docker Login
+# 9. Docker Login
 # ----------------------------
 - script: |
     echo "$(DOCKERHUB_PASSWORD)" | docker login -u "$(DOCKERHUB_USERNAME)" --password-stdin
   displayName: 'Docker Login'
 
 # ----------------------------
-# 6. Build & Push Docker Image
+# 10. Docker Build & Push
 # ----------------------------
 - script: |
     docker build -t $(imageName):latest .
@@ -58,7 +99,7 @@ steps:
   displayName: 'Build & Push Docker Image'
 
 # ----------------------------
-# 7. Test the Container Locally
+# 11. Run & Test the Container
 # ----------------------------
 - script: |
     echo "Running container locally on agent..."
@@ -75,4 +116,4 @@ steps:
 
     echo "Cleaning up..."
     docker stop test-container && docker rm test-container
-  displayName: 'Test Docker Container'
+  displayName: 'Run Docker Container & Test'
